--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ click>=8.1.0
 # For visualization
 pyvis>=0.3.2
 
+# For cloud storage
+requests>=2.31.0
+
 # Development
 black>=24.0.0
 flake8>=7.0.0
